Bug 280718 - MSPowerPoint2007: Bullet and text overlap in the right frame.
Summary: MSPowerPoint2007: Bullet and text overlap in the right frame.
Status: VERIFIED FIXED
Alias: None
Product: calligrastage
Classification: Applications
Component: filter/pptx (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Matus Uzak
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-08-24 15:25 UTC by Matus Uzak
Modified: 2011-11-11 08:22 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Test file in PPTX format - created in MS PowerPoint 2007 (61.64 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2011-08-24 15:25 UTC, Matus Uzak
Details
screen shot - MS PowerPoint 2007 (138.12 KB, image/png)
2011-08-24 15:27 UTC, Matus Uzak
Details
screen shot - stage (177.59 KB, image/png)
2011-08-24 15:28 UTC, Matus Uzak
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Matus Uzak 2011-08-24 15:25:02 UTC
Created attachment 63114 [details]
Test file in PPTX format - created in MS PowerPoint 2007

Version:           unspecified
OS:                Linux

The bullet and list item text in the right frame overlap.  The reason is incorrect fo:margin-left and fo:text-indent in the corresponding list style.  Looks like an inheritance issue.

Reproducible: Always

Steps to Reproduce:
1. Open the test file in stage.

Actual Results:  
The bullet and text in the right frame overlap.

Expected Results:  
Check the MSPowerPoint 2007 screen shot for proper positioning.
Comment 1 Matus Uzak 2011-08-24 15:27:44 UTC
Created attachment 63115 [details]
screen shot - MS PowerPoint 2007
Comment 2 Matus Uzak 2011-08-24 15:28:06 UTC
Created attachment 63116 [details]
screen shot - stage
Comment 3 Matus Uzak 2011-08-24 19:20:47 UTC
Git commit 1d6f67df47c8b3ce491e006402139c3ecc26b75e by Matus Uzak.
Committed on 24/08/2011 at 21:19.
Pushed by uzak into branch 'master'.

libmsooxml:Update bullet properties while reading the current paragraph style.

BUG:280718

M  +20   -4    filters/libmsooxml/MsooXmlCommonReaderDrawingMLImpl.h

http://commits.kde.org/calligra/1d6f67df47c8b3ce491e006402139c3ecc26b75e
Comment 4 swathi 2011-11-11 08:22:38 UTC
Verified in aac9b32c182585abca4455b7c67016d61340a555.