libmsooxml:Update bullet properties while reading the current paragraph style.

BUG:280718